bnc#807777 fdo#52182: Fixed click in frames located in header/footer

Using a distance to click to select the best object to select between
normal text and background object.

(cherry picked from commit e8fbe97900f13305b17015d9044993bde4adab36)

Conflicts:
	sw/source/core/layout/trvlfrm.cxx
	sw/source/ui/docvw/edtwin.cxx

Change-Id: Ib5b53161c7af2c16f4df379382f2e53fc6d8092b